--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <title>Home</title>
 </head>
 <body>
@@ -13,5 +14,17 @@
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
     </nav>
+    <div id="main-content">
+        <section>
+            <h1>Syed Hasan</h1>
+            <h2>Student at Gotham Collaborative High school</h2>
+            <div class="social">
+                <li><a href=""><i class="fab fa-github fa-2x"></i></a></li>
+                <li><a href=""><i class="fab fa-twitter fa-2x"></i></a></li>
+                <li><a href=""><i class="fab fa-facebook fa-2x"></i></a></li>
+                <li><a href=""><i class="fab fa-linkedin fa-2x"></i></a></li>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
